@@ -25,6 +25,8 @@ Changes in 3.1.3 --
   - fixed selection of Python on macOS:
     - select the system Python 2 or 3 according to LilyPond's version
     - support MacPorts' LilyPond tools
+    - add option to allow forcing the use of the tools' #! lines
+      (useful for self-compiled or other nonstandard LilyPond installations)
 
 
 Changes in 3.1.2 -- Easter 2020
